# NBDYs-Snakes

./: pyproject.toml
NBDYs snakes/: Main.py
tests/: test_second_discord_bot.py
